--- a/api/package.json
+++ b/api/package.json
@@ -31,8 +31,10 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
+    "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
