--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_API_URI=https://api.inventory.salimkm.tech/api/v_1
+# VITE_API_URI=https://api.inventory.salimkm.tech/api/v_1
+VITE_API_URI=http://localhost:3005/api/v_1
